--- a/index.html
+++ b/index.html
@@ -103,5 +103,40 @@
             <button class="view-all">View All</button>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer-content">
+
+            <!-- Logo and Description -->
+            <div class="footer-logo">
+                <div class="kids-logo">
+                    <img src="assets/logo.png" alt="Kids Education Logo" class="logo">
+                    <h1>Kids Education</h1>
+                </div>
+                <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+            </div>
+      
+            <!-- About School Links -->
+            <div class="footer-links">
+                 <h3>About School</h3>
+                 <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#facilities">Facilities</a></li>
+                    <li><a href="#admission">Admission</a></li>
+                </ul>
+            </div>
+      
+            <!-- Social Media Links -->
+            <div class="footer-social">
+                <h3>Keep In Touch</h3>
+                <div class="social-icons">
+                    <a href="#"><img src="assets/fb.png" alt="Facebook"></a>
+                    <a href="#"><img src="assets/dribble.png" alt="Dribble"></a>
+                    <a href="#"><img src="assets/twitter.png" alt="Twitter"></a>
+                    <a href="#"><img src="assets/google+.png" alt="Google"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
