--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
             <button class="view-all">View All</button>
         </section>
     </main>
+    <!-- marquee -->
+    <marquee class="marquee">
+        With the courage, Confidence, Creativity and Compassion to make theirUnique Contribution in a Diverse and Dynamic World..
+    </marquee>
     <footer class="footer">
         <div class="footer-content">
 
